--- a/wwwroot/lib/vue/package.json
+++ b/wwwroot/lib/vue/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vue",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "Reactive, component-oriented view layer for modern web interfaces.",
   "main": "dist/vue.runtime.common.js",
   "module": "dist/vue.runtime.esm.js",
   "unpkg": "dist/vue.js",
   "typings": "types/index.d.ts",
   "files": [
+    "src",
     "dist/*.js",
     "types/*.d.ts"
   ],
